# DBSystemsImplementationHW

./: README.md
Laboratorios/IIC3413-DB/: .gitignore  CMakeLists.txt  README.md
Laboratorios/IIC3413-DB/scripts/: generate_graph.py  triangle_query.py
Laboratorios/IIC3413-DB/src/base/binding/: binding.h  binding_iter.h
Laboratorios/IIC3413-DB/src/base/graph/: edge.h  graph_object.h  node.h
Laboratorios/IIC3413-DB/src/base/ids/: graph_id.h  object_id.cc  object_id.h  var_id.h
Laboratorios/IIC3413-DB/src/main/: check_bpts.cc  create_db.cc  grammar.cc  query.cc
Laboratorios/IIC3413-DB/src/relational_model/: relational_model.cc  relational_model.h
Laboratorios/IIC3413-DB/src/relational_model/binding/: binding_filter.cc  binding_filter.h  binding_id.cc  binding_id.h  binding_id_iter.h  binding_match.cc  binding_match.h  binding_project.cc  binding_project.h
Laboratorios/IIC3413-DB/src/relational_model/graph/: relational_graph.cc  relational_graph.h
Laboratorios/IIC3413-DB/src/relational_model/import/: bulk_import.cc  bulk_import.h  bulk_import_ast.h  bulk_import_grammar.h  (+2 more)
Laboratorios/IIC3413-DB/src/storage/: buffer_manager.cc  buffer_manager.h  file_id.h  file_manager.cc  file_manager.h  page.cc  page.h
Laboratorios/IIC3413-DB/src/tests/: bplus_tree.cc
Laboratorios/IIC3413-DB/tests/: query_debug
Laboratorios/IIC3413-DB/tests/queries/: edge_label_1.query  edge_label_2.query  test
Laboratorios/IIC3413-DB/tests/succeed/: q02.txt  q04.txt  q10.txt  q12.txt  q14.txt  q15.txt  q20.txt  q21.txt  q22.txt  q23.txt  q25.txt  q27.txt  q29.txt  q31.txt  q33.txt
(+285 files in other folders)
